Fix issue where horizontal scroll bar was appearing when not needed

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,11 @@
-html, body {
+html {
   height: 100%;
   background-color: #81D4FA;
+  overflow-x: hidden;
+}
+
+body {
+  height: 100%;
   font-family: Times, serif;
   font-size: 18px;
 }
